<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vilma_interface</name>
  <version>0.0.0</version>
  <description>VILMA's Autoware vehicle interface communication with MicroAutoBox embedded system thought UDP.</description>
  <maintainer email="gabriel.rocha@ieee.org">Gabrel Toffanetto</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
